PHY_GetActiveEnvironment() fails while python controls BGE #42679

Closed
opened 2014-11-21 20:48:58 +01:00 by Abraham Sewill · 7 comments

System Information
Windows 8.1 64 bit; Radeon R9 280X.

Blender Version
Broken: 2.71-2.72b (release versions)
Worked: Unknown

Short description of error
PHY_GetActiveEnvironment() fails while BGE has yielded control to a custom python script via KX_GetPythonMain()/KX_GetPythonCode/PyRun_SimpleString(). As a consequence, any python function that uses it (i.e bge.constraints.getCharacter(), bge.logic.getPhysicsTicRate(), etc) causes issues in both the embeded and standalone blenderplayer implementaions.

bge.constraints.getCharacter() returns None, as it actually checks that it actually has an active environment to work with

bge.logic.getPhysicsTicRate() crashes blenderplayer outright.

Exact steps for others to reproduce the error
I've attached a blend file that prints the return value of getCharacter() and getPhysicsTicRate() (which causes a segfault).

bug-report.blend

**System Information** Windows 8.1 64 bit; Radeon R9 280X. **Blender Version** Broken: 2.71-2.72b (release versions) Worked: Unknown **Short description of error** PHY_GetActiveEnvironment() fails while BGE has yielded control to a custom python script via KX_GetPythonMain()/KX_GetPythonCode/PyRun_SimpleString(). As a consequence, any python function that uses it (i.e bge.constraints.getCharacter(), bge.logic.getPhysicsTicRate(), etc) causes issues in both the embeded and standalone blenderplayer implementaions. bge.constraints.getCharacter() returns None, as it actually checks that it actually has an active environment to work with bge.logic.getPhysicsTicRate() crashes blenderplayer outright. **Exact steps for others to reproduce the error** I've attached a blend file that prints the return value of getCharacter() and getPhysicsTicRate() (which causes a segfault). [bug-report.blend](https://archive.blender.org/developer/F125244/bug-report.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AbrahamSewill

Added subscriber: @AbrahamSewill
Author

I forgot to mention that I also tested in those blender versions in OSX 10.9.4.

I forgot to mention that I also tested in those blender versions in OSX 10.9.4.

Added subscriber: @Moguri

Added subscriber: @Moguri

The giving control to Python thing is really not well supported or tested. Unfortunately, I don't know if/when these types of bugs will ever be fixed since I think this code no longer has a maintainer.

The giving control to Python thing is really not well supported or tested. Unfortunately, I don't know if/when these types of bugs will ever be fixed since I think this code no longer has a maintainer.

This issue was referenced by 8444f7ba2b

This issue was referenced by 8444f7ba2b2bbcc465b4890e2fe4d473181c0ef1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42679
No description provided.