BGE: Fix T42679: Python physics environment not setted for python control script.